[gd_scene load_steps=24 format=3 uid="uid://dedw55v5143e3"]

[ext_resource type="PackedScene" uid="uid://dxce10lic7olv" path="res://scenes/Board.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/game.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/title_screen.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://b120xc8fupqqc" path="res://assets/fonts/Kanit-Bold.ttf" id="4"]
[ext_resource type="PackedScene" uid="uid://r3hsrdm3vnoq" path="res://scenes/options.tscn" id="5"]

[sub_resource type="FontFile" id="20"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="36"]
bg_color = Color(0.0666667, 0.113725, 0.0666667, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="33"]
bg_color = Color(0.0666667, 0.113725, 0.0666667, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="34"]
bg_color = Color(0.0666667, 0.113725, 0.0666667, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="35"]
bg_color = Color(0.0666667, 0.113725, 0.0666667, 1)
draw_center = false

[sub_resource type="StyleBoxFlat" id="21"]
bg_color = Color(0.278431, 0.278431, 0.278431, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="FontFile" id="22"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="23"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="26"]
bg_color = Color(0.188235, 0.317647, 0.0117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="24"]
bg_color = Color(0.414, 0.69, 0.0276, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="25"]
bg_color = Color(0.284, 0.32, 0.2336, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="29"]
bg_color = Color(0.25098, 0.0117647, 0.0117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="27"]
bg_color = Color(0.6, 0.03, 0.03, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="28"]
bg_color = Color(0.25, 0.1875, 0.1875, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0

[sub_resource type="FontFile" id="30"]
fallbacks = Array[Font]([ExtResource("4")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="32"]
bg_color = Color(0.137255, 0.203922, 0.14902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="31"]
bg_color = Color(0.3685, 0.55, 0.401775, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.0705882, 0.101961, 0.0705882, 1)

[node name="Board" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -637.5
offset_top = -450.0
offset_right = 637.5
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -209.0
offset_right = 819.0

[node name="TitleScreen" parent="." instance=ExtResource("3")]
anchors_preset = 0

[node name="Veil" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="GameWin" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GameWin"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -152.0
offset_right = 800.0
offset_bottom = 152.0
mouse_filter = 2
theme_override_colors/default_color = Color(0.666667, 0.0431373, 0.0431373, 1)
theme_override_fonts/normal_font = SubResource("20")
bbcode_enabled = true
text = "Gratulacje!"

[node name="Buttons" type="VBoxContainer" parent="GameWin"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -350.0
offset_right = 139.0
mouse_filter = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NewGame" type="Button" parent="GameWin/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.803922, 0.803922, 0.803922, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = SubResource("2")
theme_override_styles/normal = SubResource("36")
theme_override_styles/hover = SubResource("33")
theme_override_styles/pressed = SubResource("34")
theme_override_styles/disabled = SubResource("35")
disabled = true
text = "New Game"

[node name="Quit" type="Button" parent="GameWin/Buttons"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.803922, 0.803922, 0.803922, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.239216, 0.239216, 0.239216, 1)
theme_override_fonts/font = SubResource("2")
theme_override_styles/normal = SubResource("36")
theme_override_styles/hover = SubResource("33")
theme_override_styles/pressed = SubResource("34")
theme_override_styles/disabled = SubResource("35")
disabled = true
text = "Exit"

[node name="Confirmation" type="Control" parent="."]
visible = false
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="Panel" type="Panel" parent="Confirmation"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("21")

[node name="MarginContainer" type="MarginContainer" parent="Confirmation/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Confirmation/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Confirmation/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("22")
text = "Czy na pewno chcesz zacząć nową grę?"

[node name="HBoxContainer" type="HBoxContainer" parent="Confirmation/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="OK" type="Button" parent="Confirmation/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_fonts/font = SubResource("23")
theme_override_styles/normal = SubResource("26")
theme_override_styles/hover = SubResource("24")
theme_override_styles/pressed = SubResource("24")
theme_override_styles/disabled = SubResource("25")
text = "YES"

[node name="Cancel" type="Button" parent="Confirmation/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_fonts/font = SubResource("23")
theme_override_styles/normal = SubResource("29")
theme_override_styles/hover = SubResource("27")
theme_override_styles/pressed = SubResource("27")
theme_override_styles/disabled = SubResource("28")
text = "NO"

[node name="Buttons" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 125.0
offset_bottom = 167.0

[node name="NewGame" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 120.0
offset_bottom = 55.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_fonts/font = SubResource("30")
theme_override_styles/normal = SubResource("32")
theme_override_styles/hover = SubResource("31")
theme_override_styles/pressed = SubResource("31")
text = "New Game"

[node name="Quit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 65.0
offset_right = 120.0
offset_bottom = 105.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_colors/font_hover_color = Color(0.145098, 0.145098, 0.145098, 1)
theme_override_fonts/font = SubResource("30")
theme_override_styles/normal = SubResource("32")
theme_override_styles/hover = SubResource("31")
theme_override_styles/pressed = SubResource("31")
text = "Exit"

[node name="Options" parent="." instance=ExtResource("5")]
visible = false
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 700.0
offset_bottom = 604.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="continue_game" from="TitleScreen" to="." method="_on_TitleScreen_continue_game"]
[connection signal="new_game" from="TitleScreen" to="." method="_on_TitleScreen_new_game"]
[connection signal="options" from="TitleScreen" to="." method="_on_TitleScreen_options"]
[connection signal="quit_game" from="TitleScreen" to="." method="_on_TitleScreen_quit_game"]
[connection signal="color_changed" from="Options" to="." method="_on_Options_color_changed"]
[connection signal="options_closed" from="Options" to="." method="_on_Options_options_closed"]
